--- a/group-filter/group-filter.vcxproj
+++ b/group-filter/group-filter.vcxproj
@@ -92,6 +92,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>comctl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -108,6 +109,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>comctl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -120,6 +122,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>comctl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -136,6 +139,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>comctl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -143,15 +147,33 @@
     <ClInclude Include="group-filter.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="toolbar.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="group-filter.c" />
+    <ClCompile Include="toolbar.c" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="group-filter.rc" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="group-filter.ico" />
+    <Image Include="icons\bitmap1.bmp" />
+    <Image Include="icons\bitmap2.bmp" />
+    <Image Include="icons\bitmap3.bmp" />
+    <Image Include="icons\clear_all_groups.bmp" />
+    <Image Include="icons\clear_selected.bmp" />
+    <Image Include="icons\element.bmp" />
+    <Image Include="icons\group.bmp" />
+    <Image Include="icons\hide_selected.bmp" />
+    <Image Include="icons\highlight.bmp" />
+    <Image Include="icons\reload.bmp" />
+    <Image Include="icons\show_active_group.bmp" />
+    <Image Include="icons\show_all_groups.bmp" />
+    <Image Include="icons\show_full_model.bmp" />
+    <Image Include="icons\show_multiple_groups.bmp" />
+    <Image Include="icons\show_selected.bmp" />
+    <Image Include="icons\show_selected_only.bmp" />
     <Image Include="small.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
