--- a/group-filter/group-filter.vcxproj.filters
+++ b/group-filter/group-filter.vcxproj.filters
@@ -30,12 +30,18 @@
     <ClInclude Include="toolbar.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="femap.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="group-filter.c">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="toolbar.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="femap.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -63,12 +69,6 @@
     <Image Include="icons\clear_selected.bmp">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="icons\bitmap1.bmp">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="icons\bitmap2.bmp">
-      <Filter>Resource Files</Filter>
-    </Image>
     <Image Include="icons\show_all_groups.bmp">
       <Filter>Resource Files</Filter>
     </Image>
@@ -85,9 +85,6 @@
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="icons\highlight.bmp">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="icons\bitmap3.bmp">
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="icons\show_full_model.bmp">
