--- a/group-filter/group-filter.vcxproj
+++ b/group-filter/group-filter.vcxproj
@@ -147,12 +147,14 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="group-filter.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="search.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="toolbar.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="femap.cpp" />
     <ClCompile Include="group-filter.c" />
+    <ClCompile Include="search.c" />
     <ClCompile Include="toolbar.c" />
   </ItemGroup>
   <ItemGroup>
