--- a/group-filter/group-filter.vcxproj.filters
+++ b/group-filter/group-filter.vcxproj.filters
@@ -142,4 +142,9 @@
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="application.manifest">
+      <Filter>Resource Files</Filter>
+    </Manifest>
+  </ItemGroup>
 </Project>
