--- a/fepick/fepick.rc
+++ b/fepick/fepick.rc
@@ -2,11 +2,14 @@
 #include <winver.h>
 #include "resource.h"
 
+ID_ICON ICON "./icons/favicon.ico"
 ISOLATIONAWARE_MANIFEST_RESOURCE_ID  RT_MANIFEST "manifest.xml"
 
-ID_ACCEL ACCELERATORS
+ID_ACCEL_GLOBAL ACCELERATORS
 BEGIN
     "A", ID_SELECTALL, CONTROL, VIRTKEY
+    "Z", ID_BUTTON_UNDO, CONTROL, VIRTKEY
+    "Y", ID_BUTTON_REDO, CONTROL, VIRTKEY
 END
 
 VS_VERSION_INFO VERSIONINFO
