--- a/fepick/fepick.rc
+++ b/fepick/fepick.rc
@@ -14,18 +14,29 @@ END
 
 ID_RIGHTCLICK_MENU MENU
 BEGIN
-    POPUP "HIghlight Options"
+    POPUP "Listview Options"
     BEGIN
-        MENUITEM "Off",                         ID_BUTTON_OK
-        MENUITEM "Highlight",                   ID_BUTTON_OK
-        MENUITEM "Transparent Highlight",       ID_BUTTON_OK
-        MENUITEM "Show Selected Only",          ID_BUTTON_OK
-        MENUITEM SEPARATOR
-        MENUITEM "Autoscale to Show Entities",  ID_BUTTON_OK
-        MENUITEM "Show Labels",                 ID_BUTTON_OK
-        MENUITEM "Show Normals",                ID_BUTTON_OK
-        MENUITEM "Highlight Color",             ID_BUTTON_OK
+        MENUITEM "Select All\tCtrl+A",       ID_SELECTALL
+        MENUITEM "Copy\tCtrl+C",             ID_SELECTALL
+        MENUITEM "Paste\tCtrl+V",            ID_SELECTALL
+        MENUITEM "Pick From File\tCtrl+O",   ID_BUTTON_OK
+        MENUITEM "Pick From Range\tCtrl+R",  ID_RANGEBOX
     END
+END
+
+ID_RANGEBOX DIALOGEX 0, 0, 100, 87
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Select Load Cases"
+FONT 8, "MS Shell Dlg", 0, 0, 0x1
+BEGIN
+    LTEXT           "ID:",0,7,7,30,8
+    LTEXT           "To:",0,7,27,30,8
+    LTEXT           "By:",0,7,47,30,8
+    EDITTEXT         ID_EDIT_FROM, 30, 7, 63, 14
+    EDITTEXT         ID_EDIT_TO, 30, 27, 63, 14
+    EDITTEXT         ID_EDIT_BY, 30, 47, 63, 14 
+    DEFPUSHBUTTON   "OK",IDOK,53,67,40,14,WS_GROUP
+    DEFPUSHBUTTON   "Cancel",IDCANCEL,7,67,40,14,WS_GROUP
 END
 
 VS_VERSION_INFO VERSIONINFO
